removed excessive mocking from unit tests
Signed-off-by: Tanvir Alam <tanvralm@amazon.com>